# millionaire-cpp

./: .gitignore  CMakeLists.txt  README.md
assets/: default_questions.csv  logo.txt
include/: config.hpp  game.hpp  lifelines.hpp  question.hpp  utils.hpp
src/: game.cpp  lifelines.cpp  millionaire.cpp  utils.cpp
tests/: CMakeLists.txt
